--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,4 +20,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (min-width: 992px) and (max-width: 1199px) {} // md
 @media (min-width: 1200px) {} // lg
 
-
+/* You can add global styles to this file, and also import other style files */
+.clickable {
+  cursor: pointer;
+}
